# backup

all_launch/: package.xml  setup.py
all_launch/launch/: all_launch.py
cmdvel_motor/: package.xml  setup.cfg  setup.py
cmdvel_motor/cmdvel_motor/: cmdvel_node.py
depth_obstacle_detect_ros/launch/: obstacle_detect.launch.py
depth_obstacle_detect_ros/src/: depth_obstacle_detect_ros.cpp
hot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
hot/hot/: 1 copy.py  1.py  server.py  shock.py  test.py
hot/hot/step_detection/: line.py  node1.py  node2.py  node3.py  node4.py  node5.py  node6.py  step.py  step_detector_node.py  test.py
hot/msg/: StepEvent.msg
imu_pkg/: package.xml  setup.py
imu_pkg/imu_pkg/: imu_publisher.py  imu_subscriber.py  publisher.py  subscriber.py
line_detector/: CMakeLists.txt  package.xml
line_detector/src/: line_detector_node.cpp
project_hot/: CMakeLists.txt  package.xml
project_hot/config/: joint_names_project_hot.yaml
project_hot/launch/: display.launch  gazebo.launch
project_hot/meshes/: BL_foot_leg.STL  BL_hip_leg.STL  BL_knee_leg.STL  BL_steering.STL  BL_wheel.STL  BR_foot_leg.STL  BR_hip_leg.STL  BR_knee_leg.STL  BR_steering.STL  BR_wheel.STL  FL_foot_leg.STL  FL_hip_leg.STL  FL_knee_leg.STL  FL_steering.STL  FL_wheel.STL  FR_hip_leg.STL  FR_knee_leg.STL  FR_leg_foot.STL  FR_leg_steering.STL  RF_leg_wheel.STL  base_link.STL
project_hot/urdf/: project_hot.csv  project_hot.urdf
urdf_tutorial/: package.xml  setup.py
urdf_tutorial/config/: camera.rviz  imu_controller.yaml  lidar.rviz  robot.rviz  with_robot.world
(+6 files in other folders)
